# a-novel-factory

./: README.md  pyproject.toml
a_novel_factory/: corpora.py  factories.py  main.py  objects.py  providers.py  util.py
output/: 0.1.0-place_improve.epub  0.1.0-place_improve.md  0.2.0-its_already_magazine_tree.epub  0.2.0-its_already_magazine_tree.md  0.2.1-show_money_field.epub  0.2.1-show_money_field.md  0.2.2-game_go_rule.epub  0.2.2-game_go_rule.md  0.2.3-usually_score_begin.epub  0.2.3-usually_score_begin.md  0.2.4-audience_report.epub  0.2.4-audience_report.md  0.3.0-role_task.epub  0.3.0-role_task.md
tests/: test_characters.py  test_output.py  test_random_seed.py
